Ui improvements and bug fixes (#5677)
* PLT-5565 - Fixing theme colors not updating

* PLT-4721 - Removing status ind for system messages

* PLT-5735 - Fixing ellipsis in firefox

* PLT-5010 - Removing extra space in channel modal

* PLT-5584 - Inline image overrning edit textarea

* PLT-5475  - Fixing tutorials on mobile

* PLT-5142 - Disabling poitner events for status

* PLT-5728 - Fixing emoji highlight on hover

--- a/webapp/sass/components/_multi-select.scss
+++ b/webapp/sass/components/_multi-select.scss
@@ -29,7 +29,6 @@
 
     .Select-value-label {
         overflow: hidden;
-        text-overflow: ellipsis;
     }
 }
 
