--- a/webapp/sass/responsive/_mobile.scss
+++ b/webapp/sass/responsive/_mobile.scss
@@ -9,6 +9,7 @@
 
         .Select-value-label {
             max-width: 190px;
+            text-overflow: ellipsis;
         }
     }
 
@@ -1622,6 +1623,7 @@
                 }
             }
         }
+
         .attachment {
             .attachment__image {
                 &.attachment__image--openraph {
@@ -1635,6 +1637,7 @@
         left: 0;
         position: fixed;
         top: 0;
+        z-index: 9999;
 
         .tutorial__content {
             .tutorial__steps {
